--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Myproject</title>
-    <!--
+
     <style>
         body {
           background-color: moccasin;
@@ -19,12 +19,12 @@
           margin-left: 40px;
         }
     </style>
-    -->
+
     <link rel="icon" href="static/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
-<h3> Myproject <br /> </h3>
+<h3> {{  title }} <br /> </h3>
     {% for item in list %}
         {{ item }} <br />
     {% endfor %}
